css/main.css
/* ... */
.header-section.has-img .no-img {
  margin-top: 0;
  background-color: #FCFCFC;
  margin: 0 0 40px;
  padding: 20px 0;
  box-shadow: 0 0 5px #AAA;
}
/* Many phones are 320 or 360px, so make sure images are a proper aspect ratio in those cases */
.header-section.has-img .intro-header.no-img {
  display: none;
}
@media only screen and (max-width: 365px) {
  .header-section.has-img .intro-header.no-img {
    display: block;
  }
  .intro-header.big-img {
    width: 100%;
    height: 220px;
  }
  .intro-header.big-img .page-heading,
  .intro-header.big-img .post-heading {
    display: none;
  }
  .header-section.has-img .big-img {
    margin-bottom: 0;
  }
}
@media only screen and (max-width: 325px) {
  .intro-header.big-img {
    height: 200px;
  }
}

.caption {
  text-align: center;
  font-size: 14px;
  padding: 10px;
  font-style: italic;
  margin: 0;
  display: block;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

#header-gh-btns {
  margin-bottom: 15px;
}
@media only screen and (max-width: 500px) {
  #header-gh-btns > iframe {
    display: block;
    margin-bottom: 5px;
  }
}

/* --- Pager --- */

.pager li a {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: 800;
  letter-spacing: 1px;
  padding: 10px 5px;
  background-color: #FFF;
  border-radius: 0;
  color: #404040;
}
@media only screen and (min-width: 768px) {
  .pager li a {
    padding: 15px 25px;
  }
}
.pager li a:hover,
.pager li a:focus {
  color: #FFF;
  border: 1px solid {{ site.hover-col }};
  background-color: {{ site.hover-col }};
}

.pager {
  margin: 10px 0 0;
}

.pager.blog-pager {
  margin-top: 0;
}

@media only screen and (min-width: 768px) {
  .pager.blog-pager  {
    margin-top: 10px;
  }
}

/* --- Tables --- */

table {
  padding: 0;
}
table tr {
  border-top: 1px solid #cccccc;
  background-color: #ffffff;
  margin: 0;
  padding: 0;
}
table tr:nth-child(2n) {
  background-color: #f8f8f8;
}
table tr th {
  font-weight: bold;
  border: 1px solid #cccccc;
  text-align: left;
  margin: 0;
  padding: 6px 13px;
}
table tr td {
  border: 1px solid #cccccc;
  text-align: left;
  margin: 0;
  padding: 6px 13px;
}
table tr th :first-child,
table tr td :first-child {
  margin-top: 0;
}
table tr th :last-child,
table tr td :last-child {
  margin-bottom: 0;
}

/* --- Code blocks --- */

pre {
  font-size: 16px;
  line-height: 1.5em;
}
pre code {
  white-space: pre;
}
pre.highlight, .highlight > pre, td.code pre {
  background-color: #FAFAFA;
  background-image: linear-gradient(#F9F9F9 50%, #FDFDFD 50%);
  background-repeat: repeat;
  background-size: 3em 3em;
  background-position: 0px 10px;
  border-left: 7px solid #444;
}
code table, code table td, code table th, code table tbody, code table tr,
td.gutter pre {
  padding: 0;
  border: none;
  background-color: #fff;
}
.highlight > pre {
  padding: 0;
}
td.code pre {
  border-width: 0 0 0 2px;
  border-style: solid;
  border-color: #444;
  border-radius: 0;
}
td.gutter {
  padding-top: 3px;
}

/* --- Social media sharing section --- */

#social-share-section {
  margin-bottom: 30px;
}

/* --- Notification boxes --- */
.box-note, .box-warning, .box-error {
  padding: 15px 15px 15px 10px;
  margin: 20px 20px 20px 5px;
  border: 1px solid #eee;
  border-left-width: 5px;
  border-radius: 5px 3px 3px 5px;
}

.box-note {
  background-color: #eee;
  border-left-color: #2980b9;
}

.box-warning {
  background-color: #fdf5d4;
  border-left-color: #f1c40f;
}

.box-error {
  background-color: #f4dddb;
  border-left-color: #c0392b;
}

/* Fix table border github gist snippets */

.gist, .gist-file table tr {
  border: unset;
}

.gist, .gist-file table tr td {
  border: unset;
}

/* Fix .navbar-toggle */

.navbar-default button.navbar-toggle:focus,
.navbar-default button.navbar-toggle:hover {
  background-color: initial;
}

.navbar-default button.navbar-toggle[aria-expanded="true"] {
  background-color: rgba(0, 0, 0, 0.2);
}

/* Tags page */

.tag-btn {
  margin: 5px;
}

#full-tags-list {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

#full-tags-list .tag-entry {
  margin: 0 0 15px 25px;
}

#full-tags-list .tag-entry a {
  font-size: 20px;
}

#full-tags-list .tag-entry .entry-date {
  color: #808080;
  font-style: italic;
  font-size: 16px;
}

.email-obfuscation span:nth-child(2n){
  display: none;
}

